# HelgaSangern

./: .gitignore  Cargo.toml  getRooms.py  tailwind.config.js
.sqlx/: query-2a1f1218d0ff3b4aa7c7b0da9edc419e3ddb0020213bc1f1510d8a32e53c2a3f.json  query-5a9fce113597d74e80b3847af1f61bcd9d3ac21918af31d5a22159ded7fcf46d.json
migrations/: 20241218163028_migrations.sql
src/: main.rs  update.rs
static/: styles.css
